--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.3.3",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "millify": "^5.0.1",
     "next": "13.1.6",
+    "nprogress": "^0.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "sass": "^1.58.0"
   }
 }
